--- a/000-Vue/week1-day2/5.transition.html
+++ b/000-Vue/week1-day2/5.transition.html
@@ -5,11 +5,11 @@
   <title>珠峰培训 http://www.zhufengpeixun.cn</title>
   <style>
     div>div{
-      width: 100px;height: 100px;background: red;opacity: 0.3;
+      width: 100px;height: 100px;background: red;
     }
-   /* .jw-enter{opacity: 0;}
-    .jw-enter-active{transition: 1s linear;}
-    .jw-leave-active{opacity: 0;transition: 1s linear}*/
+    .jw-enter{opacity: 0;}
+    .jw-enter-active{transition:1s ease-in-out;}
+    .jw-leave-active{opacity: 0;transition:1s ease-in-out}
   </style>
 </head>
 <body>
