--- a/000-Vue/week1-day3/2.filters.html
+++ b/000-Vue/week1-day3/2.filters.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>珠峰培训 http://www.zhufengpeixun.cn</title>
+  <title></title>
 </head>
 <body>
 <div id="app1">{{'hello' | my}}</div>
