--- a/1.js_free/1.数据类型.html
+++ b/1.js_free/1.数据类型.html
@@ -275,6 +275,9 @@
     console.log(str1==null);//false
     console.log(str1==undefined);//false
 
+    console.log(typeof null);//object
+    console.log(typeof undefined);//undefined
+
 </script>
 </body>
 </html>
