--- a/000-Vue/week1-day2/2.select.html
+++ b/000-Vue/week1-day2/2.select.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>珠峰培训 http://www.zhufengpeixun.cn</title>
+  <title></title>
   <style>
     [v-cloak]{display: none}
   </style>
