--- a/000-Vue/week1-day2/4.computed.html
+++ b/000-Vue/week1-day2/4.computed.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>珠峰培训 http://www.zhufengpeixun.cn</title>
+  <title></title>
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
   <style>
     .container .row table tr td{vertical-align: middle}
