--- a/000-Vue/week1-day3/10.directive.html
+++ b/000-Vue/week1-day3/10.directive.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title></title>
     <style>
     .a{position: absolute;width: 100px;height: 100px;background: red}
     </style>
