--- a/000-Vue/week1-day3/8.v-bind_class.html
+++ b/000-Vue/week1-day3/8.v-bind_class.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>珠峰培训</title>
+    <title></title>
     <style>
       .x{background: blue}
       .y{font-size: 30px}
