--- a/000-Vue/week1-day3/todoList.html
+++ b/000-Vue/week1-day3/todoList.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>珠峰培训</title>
+    <title></title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <style>
       .del{text-decoration: line-through;color:#cccccc!important;}
